Revert "Disallow multiple inheritance"
This reverts commit 4d114b18862325070b9eb5e1dfac511b29a273f9.